# openssl_TLS_example

./: .gitignore  CMakeLists.txt  README.md
src/: ssl_client.c  ssl_server.c
src/bio/: bio_client.c  bio_server.c
src/ssl/: ssl_client.c  ssl_server.c
ssl-keys/: key.pem  mycert.pem
